# wiki3-ai-site

./: .gitignore  .gitmodules  README.md  notes.txt  pyproject.toml
.devcontainer/: devcontainer.json
docs/: jupyter-lite.json
docs/api/contents/: all.json
docs/api/contents/notebooks/: all.json
docs/api/contents/utils/: all.json
docs/api/contents/wiki/: all.json
docs/extensions/@wiki3-ai/ai-sdk-chat-kernel/: install.json  package.json
docs/extensions/@wiki3-ai/ai-sdk-chat-kernel/schemas/@wiki3-ai/ai-sdk-chat-kernel/: plugin.json
docs/files/: prompt_ai.ipynb  webllm-kernel.ipynb  webllm.ipynb
docs/wiki/: about.html  built-in-chat.html  index.html  prompt_ai.html  webllm-kernel.html  webllm.html
files/: about.ipynb  built-in-chat.ipynb  prompt_ai.ipynb  webllm-kernel.ipynb
lite-kernel/webllm_chat_kernel/: __init__.py
lite/notebooks/: chromeai.ipynb
